--- a/SmartSheetWindowsService/App.config
+++ b/SmartSheetWindowsService/App.config
@@ -66,7 +66,7 @@
     <add key="CronExpression" value="0 0/90 * 1/1 * ? *" />
 
     <!-- Authorization Token -->
-    <add key="APIAccessToken" value="2rwssfkmczeib22aozgub547o6" />
+    <add key="APIAccessToken" value="xxxx" />
     
     <!-- fileDirectory is the path where Excel files get exported -->
     <add key="fileDirectory" value="C:\Temp" />
@@ -78,25 +78,25 @@
     <add key="fileType" value="application/vnd.ms-excel" /> 
 
     <!-- Add sheet names and sheet Id's below -->
-    <add key="Sheet_T and M PerformanceSheet" value="372359472408452" />
-    <add key="Sheet_T and M Purchasing" value="3433443" />
-    <!--<add key="Sheet_TM Lodging" value="410811240867716" />
+    <add key="Sheet_T and M PerformanceSheet" value="x" />
+    <add key="Sheet_T and M Purchasing" value="x" />
+    <!--<add key="Sheet_TM Lodging" value="x" />
     <add key="Sheet_Renovate America_ Issue Log" value="" />
-    <add key="Sheet_Renovate America Project Log" value="410811240867716" />
-    <add key="Sheet_L&amp;A Lodging" value="445119439628164" />
-    <add key="Sheet_L&amp;A Performance" value="372359472408452" />
+    <add key="Sheet_Renovate America Project Log" value="x" />
+    <add key="Sheet_L&amp;A Lodging" value="x" />
+    <add key="Sheet_L&amp;A Performance" value="x" />
     <add key="Sheet_L&amp;A Purchasing" value="" />-->
     <!-- The task will run every 10 seconds....see Quartz Chron Expressions for sample time expressions -->
     <add key="CronExpression" value="0/10 * * * * ?" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <!--These email address recipients.  Add more and append a number at the end of 'emailRecipientxxx'-->
-    <add key="emailRecipient1" value="mattbaha@gmail.com" />
-    <add key="emailRecipient2" value="mattsb1024@gmail.com" />
-    <add key="emailRecipient3" value="andres.calderon3@gmail.com" />
+    <add key="emailRecipient1" value="x" />
+    <add key="emailRecipient2" value="x" />
+    <add key="emailRecipient3" value="x" />
       
-    <add key="emailSource" value="services@calderoninc.com" />
-    <add key="emailUsername" value="andres.calderon" />
-    <add key="emailPass" value="Samsummer!3!" />
+    <add key="emailSource" value="x" />
+    <add key="emailUsername" value="x" />
+    <add key="emailPass" value="x" />
 
   </appSettings>
 
